k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-service
                port:
                  number: 80
          - path: /api/todo
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 80
